plugins {
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'com.palantir.docker' version '0.36.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('org.springframework.retry:spring-retry')

    implementation('org.liquibase:liquibase-core')
    implementation('com.h2database:h2')

    compileOnly('org.projectlombok:lombok')
    annotationProcessor('org.projectlombok:lombok')

    runtimeOnly('org.postgresql:postgresql')

    testCompileOnly('org.projectlombok:lombok')
    testAnnotationProcessor('org.projectlombok:lombok')

    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation('uk.org.webcompere:model-assert:1.0.0')


    test {
        useJUnitPlatform()
    }

}

ext {
    appName = 'error-free-text-app'
    appVersion = '0.0.1-SNAPSHOT'
}

jar {
    enabled = false
}

bootJar {
    enabled = true
    archiveBaseName.set(appName)
    archiveVersion.set(appVersion)
}

docker {
    name "${appName}:${appVersion}"
    files tasks.bootJar.outputs
}

tasks.named("docker").configure {
    dependsOn tasks.bootJar
}